objects/VeraStar__c.object
<CustomObject>
    <fields>
        <fullName>CopadoExtID__c</fullName>
        <externalId>true</externalId>
        <label>CopadoExtID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pizza</fullName>
                </value>
                <value>
                    <fullName>Kebab</fullName>
                </value>
                <value>
                    <fullName>Burger</fullName>
                </value>
                <value>
                    <fullName>Chorizo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>VeraStar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CopadoExtID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>v-{00000}</displayFormat>
        <label>VeraStar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VeraStar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>